--- a/docs/grants-awarded.Rmd
+++ b/docs/grants-awarded.Rmd
@@ -26,7 +26,7 @@ dcgsum <- grntsum_fun(dcgdat, rnd = 'k')
 </div>
 <p></p>
 
-To date, the Tampa Bay Environmental Restoration Fund ([TBERF](https://tbep.org/our-work/restoration-research/tberf/)) has received `r tberfsum['total']` in funding and `r tberfsum['matching']` in matching funds to support `r tberfsum['n']` grants within the Tampa Bay watershed.
+To date, the Tampa Bay Environmental Restoration Fund ([TBERF](https://tbep.org/our-work/restoration-research/tberf/){target="_parent"}) has received `r tberfsum['total']` in funding and `r tberfsum['matching']` in matching funds to support `r tberfsum['n']` grants within the Tampa Bay watershed.
 
 <div id="wrapper">
 <figure>
@@ -36,11 +36,11 @@ To date, the Tampa Bay Environmental Restoration Fund ([TBERF](https://tbep.org/
 </div>
 <p></p>
 
-Funded by sales from of the Tampa Bay Estuary Specialty License Plate, also known as the [Tarpon Tag](https://tbep.org/get-involved/tarpon-tag/), [Bay Mini-Grants](https://tbep.org/our-work/restoration-research/bay-mini-grants/) provide competitive cash awards (up to \$5,000) to community organizations for projects that help restore and protect Tampa Bay. To achieve Program CCMP goals, specific Bay Mini-Grant priority actions are announced annually. Expanding the use of green infrastructure and understanding emerging contaminants have both been recent Bay Mini-Grant priorities. Since 2000, sales from the Tarpon Tag specialty license plate have collectively awarded `r bmgsum['total']` to `r bmgsum['n']` community-based restoration projects in the bay through TBEP's Bay Mini-Grant program.
+Funded by sales from of the Tampa Bay Estuary Specialty License Plate, also known as the [Tarpon Tag](https://tbep.org/get-involved/tarpon-tag/){target="_parent"}, [Bay Mini-Grants](https://tbep.org/our-work/restoration-research/bay-mini-grants/){target="_parent"} provide competitive cash awards (up to \$5,000) to community organizations for projects that help restore and protect Tampa Bay. To achieve Program CCMP goals, specific Bay Mini-Grant priority actions are announced annually. Expanding the use of green infrastructure and understanding emerging contaminants have both been recent Bay Mini-Grant priorities. Since 2000, sales from the Tarpon Tag specialty license plate have collectively awarded `r bmgsum['total']` to `r bmgsum['n']` community-based restoration projects in the bay through TBEP's Bay Mini-Grant program.
 
 <center><img alt="DCG Computer" src="img/Computer_Iso.png" width="300"/></center>
 
-Established during the COVID-19 pandemic, the [Digital Challenge Grants](https://tbep.org/our-work/restoration-research/digital-challenge-grants/) program was created to provide safer-at-home income opportunities for digital content creators, science communicators, graphic designers, and educators. In its first year, `r dcgsum['n']` creators were awarded `r dcgsum['total']` in project funding.
+Established during the COVID-19 pandemic, the [Digital Challenge Grants](https://tbep.org/our-work/restoration-research/digital-challenge-grants/){target="_parent"} program was created to provide safer-at-home income opportunities for digital content creators, science communicators, graphic designers, and educators. In its first year, `r dcgsum['n']` creators were awarded `r dcgsum['total']` in project funding.
 
 ### `r maxyr` FUNDING SUMMARY 
 
