--- a/docs/reach-index.Rmd
+++ b/docs/reach-index.Rmd
@@ -27,9 +27,10 @@ coms_tab(comdat, category = 'Website', maxyr = maxyr, chg = T, family = fml, sho
 
 #### TOTALS TO DATE 
 
-```{r}
-p <- comssum_plo(comdat, category = 'Website', family = fml, width = 800, height = 400)
-div(p, align = 'center')
+```{r, out.width = '100%'}
+# p <- comssum_plo(comdat, category = 'Website', family = fml, width = 800, height = 400)
+# div(p, align = 'center')
+comssum_plo(comdat, category = 'Website', family = fml, height = 400, width = NULL)
 ```
 
 ### Social Media Reach
@@ -44,17 +45,18 @@ coms_tab(comdat, category = 'Social Media', maxyr = maxyr, chg = T, family = fml
 
 ##### Followers
 
-```{r}
-p <- comssum_plo(comdat, category = 'Social Media', metric = 'users', family = fml, width = 800, height = 600)
-div(p, align = 'center')
+```{r, out.width = '100%'}
+# p <- comssum_plo(comdat, category = 'Social Media', metric = 'users', family = fml, width = 800, height = 600)
+# div(p, align = 'center')
+comssum_plo(comdat, category = 'Social Media', metric = 'users', family = fml, height = 600, width = NULL)
 ```
 
 ##### Engagement
 
-```{r}
-p <- comssum_plo(comdat, category = 'Social Media', metric = 'engagement', family = fml, width = 800, height = 600)
-  
-div(p, align = 'center')
+```{r, out.width = '100%'}
+# p <- comssum_plo(comdat, category = 'Social Media', metric = 'engagement', family = fml, width = 800, height = 600)
+# div(p, align = 'center')
+comssum_plo(comdat, category = 'Social Media', metric = 'engagement', family = fml, height = 600, width = NULL)
 ```
 
 ### Email Marketing
@@ -67,9 +69,10 @@ coms_tab(comdat, category = 'Email Marketing', maxyr = maxyr, chg = T, family = 
 
 #### TOTALS TO DATE 
 
-```{r}
-p <- comssum_plo(comdat, category = 'Email Marketing', family = fml, width = 800, height = 200)
-div(p, align = 'center')
+```{r, out.width = '100%'}
+# p <- comssum_plo(comdat, category = 'Email Marketing', family = fml, width = 800, height = 200)
+# div(p, align = 'center')
+comssum_plo(comdat, category = 'Email Marketing', family = fml, height = 250, width = NULL)
 ```
 
 <script type="text/javascript" src="js/iframeResizer.contentWindow.min.js"></script>
