--- a/docs/reach-index.Rmd
+++ b/docs/reach-index.Rmd
@@ -13,7 +13,7 @@ maxyr <- 2023
 
 Being heard in an increasingly noisy digital landscape is harder now than ever before. TBEP uses social networking platforms to reach new audiences and maintain intentional communication with the online community. Through engagement-driven messaging, innovative mediums, and adaptive tinkering, the Program amplifies its messages, makes science accessible to the general public, and elevates awareness of its partners' actions.
 
-The TBEP tracks the impact of our social media output using various metrics. Number of followers or engagement (reach) with our content is one way we can assess how the community interacts with our online platforms. The tables and plots below summarize this information for our various platforms. 
+The TBEP tracks the impact of our social media output using various metrics. Number of followers or engagement (impressions/reach) with our content is one way we can assess how the community interacts with our online platforms. The tables and plots below summarize this information for our various platforms. 
 
 ## {.tabset .tabset-pills}
 
