--- a/docs/water-quality-decision-matrix.Rmd
+++ b/docs/water-quality-decision-matrix.Rmd
@@ -10,12 +10,12 @@ source(here::here('R/setup.R'))
 maxyr <- 2023
 
 # local file path
-# xlsx <- here('data-raw/Results_Updated.xls')
-xlsx <- here('data-raw/Results_Provisional.xlsx')
+xlsx <- here('data-raw/Results_Updated.xls')
+# xlsx <- here('data-raw/Results_Provisional.xlsx')
 
 # import and download if new
 # epcdata <- read_importwq(xlsx, download_latest = T)
-epcdata <- read_importwq(xlsx, download_latest = F)
+epcdata <- read_importwq(xlsx, download_latest = T)
 
 # summaries for inline
 sums <- wqsum_fun(epcdata, maxyr)
