--- a/docs/water-quality-decision-matrix.Rmd
+++ b/docs/water-quality-decision-matrix.Rmd
@@ -52,7 +52,15 @@ div(p, align = 'center')
 
 ## Results for `r maxyr`
 
-In `r maxyr`, Old Tampa Bay received an action category of `r sums$OTB$action` (chlorophyll target `r sums$OTB$chla`, light attenuation target `r sums$OTB$la`), Hillsborough Bay received an action category of `r sums$HB$action` (chlorophyll target `r sums$HB$chla`, light attenuation target `r sums$HB$la`), Middle Tampa Bay received an action category of `r sums$MTB$action` (chlorophyll target `r sums$MTB$chla`, light attenuation target `r sums$MTB$la`), and Lower Tampa Bay received an action category of `r sums$LTB$action` (chlorophyll target `r sums$LTB$chla`, light attenuation target `r sums$LTB$la`). The plots below show chlorophyll and light attenuation values for each bay segment, including the management target.
+In `r maxyr`, Old Tampa Bay received an action category of `r sums$OTB$action` (chlorophyll target `r sums$OTB$chla`, light attenuation target `r sums$OTB$la`), Hillsborough Bay received an action category of `r sums$HB$action` (chlorophyll target `r sums$HB$chla`, light attenuation target `r sums$HB$la`), Middle Tampa Bay received an action category of `r sums$MTB$action` (chlorophyll target `r sums$MTB$chla`, light attenuation target `r sums$MTB$la`), and Lower Tampa Bay received an action category of `r sums$LTB$action` (chlorophyll target `r sums$LTB$chla`, light attenuation target `r sums$LTB$la`). 
+
+<!-- This map shows the outcomes for each bay segment in `r maxyr`.  The color of the bay segment indicates the management action category, with the points showing chlorophyll (left) and light attenuation (right) for each monitoring used to estimate the categories. -->
+
+<!-- ```{r} -->
+
+<!-- ``` -->
+
+The plots below show chlorophyll and light attenuation values for each bay segment, including the management target.
 
 See additional visualization tools at the Water Quality Report Card data page: [https://tbep.org/water-quality-report-card/](https://tbep.org/water-quality-report-card){target="_parent"}. Click on the tabs below to view water quality trends for each major bay segment.
 
