add link to wq report card in text for wq content

--- a/docs/water-quality-decision-matrix.Rmd
+++ b/docs/water-quality-decision-matrix.Rmd
@@ -31,7 +31,7 @@ Water quality in Tampa Bay has improved steadily in recent decades due to pollut
 </div>
 <p></p>
 
-The water quality report card is produced annually to track status and trends of water quality conditions in each of the four major bay segments.  This tool provides a simple "stoplight" graphic using water quality data provided by the Environmental Protection Commission of Hillsborough County.  The report card synthesizes thousands of water quality records to understand annual and seasonal variation in chlorophyll concentrations and water column light attenuation.  Chlorophyll provides a measure of algae growth in the water column and light attenuation provides a measure of potential shading from algae growth that can limit seagrass growth.  Excess nutrient pollution from atmospheric, wastewater, and stormwater sources can cause excess algae growth. The goal of the report card is to assess water quality trends that may be harmful for bay habitats, including conditions that are unfavorable for seagrass growth, to inform management activities that support a healthy environment.   
+The [water quality report card](https://tbep.org/water-quality-report-card){target="_parent"} is produced annually to track status and trends of water quality conditions in each of the four major bay segments.  This tool provides a simple "stoplight" graphic using water quality data provided by the Environmental Protection Commission of Hillsborough County.  The report card synthesizes thousands of water quality records to understand annual and seasonal variation in chlorophyll concentrations and water column light attenuation.  Chlorophyll provides a measure of algae growth in the water column and light attenuation provides a measure of potential shading from algae growth that can limit seagrass growth.  Excess nutrient pollution from atmospheric, wastewater, and stormwater sources can cause excess algae growth. The goal of the report card is to assess water quality trends that may be harmful for bay habitats, including conditions that are unfavorable for seagrass growth, to inform management activities that support a healthy environment.   
 
 Tracking the attainment of bay segment specific targets for chlorophyll and light attenuation provides the framework for developing and initiating bay management actions. TBEP management actions adopted in response to the annually-assessed decision support results are shown below.
 
