reknit gad page with links as target parent

--- a/docs/give-a-day.Rmd
+++ b/docs/give-a-day.Rmd
@@ -28,7 +28,7 @@ gaddat %>%
 
 ## Trash Free Waters
 
-The Tampa Bay Estuary Program is working with partners to reduce litter and debris in the watershed through the Trash Free Waters initiative. This program focuses on reducing the amount of trash entering the bay by addressing litter at its source, increasing community awareness, and improving waste management practices.  Since 2022, the Tampa Bay Debris Derby has engaged `r ddtots['nvols']` volunteers in a friendly competition to remove litter from the bay and its tributaries, totaling `r ddtots['nlbs']` pounds of debris to date. These totals complement the Give-a-Day for the Bay totals above, highlighting the importance of community involvement in keeping our waterways clean. Visit the [Trash Free Waters](https://tbep.org/trash-free-waters/) and [Debris Derby](https://tbep.org/debris-derby/) pages to learn more about this initiative.
+The Tampa Bay Estuary Program is working with partners to reduce litter and debris in the watershed through the Trash Free Waters initiative. This program focuses on reducing the amount of trash entering the bay by addressing litter at its source, increasing community awareness, and improving waste management practices.  Since 2022, the Tampa Bay Debris Derby has engaged `r ddtots['nvols']` volunteers in a friendly competition to remove litter from the bay and its tributaries, totaling `r ddtots['nlbs']` pounds of debris to date. These totals complement the Give-a-Day for the Bay totals above, highlighting the importance of community involvement in keeping our waterways clean. Visit the [Trash Free Waters](https://tbep.org/trash-free-waters/){target="_parent"} and [Debris Derby](https://tbep.org/debris-derby/){target="_parent"} pages to learn more about this initiative.
 
 ```{r}
 dddat_tab(dddat, family = fml)
